--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
